# tarkin

./: .gitignore  Dockerfile.test  LICENSE  README.md  REFERENCE.md  SECURITY.md  pyproject.toml  test_integrations.sh
.github/workflows/: publish.yaml  test.yaml
tarkin/: attach.py  build.py  cli.py  codegen.py  credentials.py  detach.py  diff.py  erase.py  inspect.py  migrate.py  model.py  query.py  serialize.py  update.py  utils.py  validate.py  yaml.py
tests/: fixtures.py  test_codegen.py  test_credentials.py  test_diff.py  test_erase.py  test_inspect.py  test_integration.py  test_migrate.py  test_query.py  test_retention.py  test_roundtrip.py  test_validate.py
