[project]
name = "tarkin"
dynamic = ["version"]
description = "Governance compiler for PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Brent Pollard", email = "brentjpollard@gmail.com" }
]
dependencies = [
    "typer",
    "pydantic",
    "sqlalchemy",
    "psycopg[binary]",
    "ruamel.yaml"
]

[project.scripts]
tarkin = "tarkin.cli:app"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["tarkin*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as requiring a live database connection",
]
