[project]
name = "tarkin"
dynamic = ["version"]
description = "Governance compiler for PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Brent Pollard", email = "brentjpollard@gmail.com" }
]
dependencies = [
    "typer>=0.9,<1.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "ruamel.yaml>=0.18,<1.0",
]
[project.optional-dependencies]
test  = ["pytest>=8.0,<9.0"]
query = [
    "anthropic>=0.25,<1.0",
    "openai>=1.0,<2.0",
]

[project.scripts]
tarkin = "tarkin.cli:app"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["tarkin*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as requiring a live database connection",
]
